--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sashido/teachablemachine-node": "^1.2.2",
+    "@teachablemachine/image": "^0.8.5",
     "bcrypt": "^5.0.0",
     "concurrently": "^6.0.0",
     "cookie-parser": "^1.4.5",
@@ -26,7 +28,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.11.13",
     "peer": "^0.6.1",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "stream": "^0.0.2",
+    "url": "^0.11.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
