--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "peerjs": "^1.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-error-overlay": "^6.0.11",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
